--- a/src/app/components/operacoes/operacoes.component.html
+++ b/src/app/components/operacoes/operacoes.component.html
@@ -51,6 +51,7 @@
                   <option [value]="'COMPRA'">Compra</option>
                   <option [value]="'VENDA'">Venda</option>
                   <option [value]="'PERMUTA'">Permuta</option>
+                  <option [value]="'OUTROS'">Outros</option>
                 </select>
               </div>
 
